Bug 122484 - UI: dialog Paragraph/Character, tab Font, box Family: search does not trigger autocomplete for font name
Summary: UI: dialog Paragraph/Character, tab Font, box Family: search does not trigge...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.1 rc
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords: accessibility, bibisected, bisected, regression
: 122693 (view as bug list)
Depends on:
Blocks: GTK3 Paragraph-Dialog
  Show dependency treegraph
 
Reported: 2019-01-04 13:00 UTC by Cor Nouws
Modified: 2019-03-12 17:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screen print of dialog with searching not triggering completion (54.15 KB, image/png)
2019-01-04 13:00 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2019-01-04 13:00:02 UTC
Created attachment 148025 [details]
screen print of dialog with searching not triggering completion

Writer
- dialog Paragraph/Character, tab Font
- use tab to go to box Family
- Type e.g. "Li"
  Notice that the list selects Liberation Mono
  > however, the name is not filled in the box where you type for searching

Noticed in Version: 6.2.0.1
Build ID: 0412ee99e862f384c1106d0841a950c4cfaa9df1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: nl-NL (nl_NL.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Cor Nouws 2019-01-04 13:00:32 UTC
was OK in 6.1.x > regression
Comment 2 Durgapriyanka 2019-01-04 22:21:14 UTC
Thank you for reporting the bug. I can not reproduce this in

Version: 6.3.0.0.alpha0+
Build ID: 3c964980da07892a02d5ac721d80558c459532d0
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-12-12_02:07:45
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 3 Xisco Faulí 2019-01-17 17:19:08 UTC
I can't reproduce it in

Version: 6.3.0.0.alpha0+
Build ID: edf8e2b6630ca9cf7117d9c7a25ef9d7231c5a9b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

but i do in

Version: 6.3.0.0.alpha0+
Build ID: edf8e2b6630ca9cf7117d9c7a25ef9d7231c5a9b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 Xisco Faulí 2019-01-17 17:24:28 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=a4503017dfcf0c919b8f81bd8cdbc44bade3f774

author	Caolán McNamara <caolanm@redhat.com>	2018-09-12 15:52:35 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-09-14 14:16:11 +0200
commit a4503017dfcf0c919b8f81bd8cdbc44bade3f774 (patch)
tree 341dd5abb9f51392d73d6a1251c8cb1c08f8a30a
parent dd1db430fe8009250253756573a1a19a45830c5f (diff)
weld SwCharDlg

Bisected with: bibisect-linux64-6.2

Adding Cc: to Caolán McNamara
Comment 5 Xisco Faulí 2019-01-17 17:28:12 UTC
*** Bug 122693 has been marked as a duplicate of this bug. ***
Comment 6 Caolán McNamara 2019-01-18 12:32:23 UTC
The gtk3 one is gtk's own autocompletion where taking the entry text as a prefix then any common suffix for the prefix is added on. What you want is to autoselect the first matching entry which I guess is probably doable.
Comment 7 Cor Nouws 2019-01-18 17:43:25 UTC
dear dev / Caolan,

I'm not sure if bug 122693, marked as dupe, is the same. So while at this one, you may want to look at that one too, for convenience :)
Comment 8 Caolán McNamara 2019-01-21 13:46:05 UTC
you can leave it as duplicate
Comment 9 Commit Notification 2019-01-21 15:33:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/ab8e0f5832fa910f8b1abd36d7cb3929cbac2395%5E%21

Resolves: tdf#122484 replace gtk autocomplete with vcl-alike autoselect

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2019-01-21 15:42:18 UTC
fixed in master, or at least it seems so to me, and a backport to 6-2. I think not necessary for 6.2.0 as its a little tricky and the lack of it isn't critical
Comment 11 Xisco Faulí 2019-01-22 14:44:33 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 392729c735bb82eecf29bae5527ec786ca293f34
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US

@Caolán, thanks for fixing this!!
Comment 12 Commit Notification 2019-01-22 17:10:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/d01161d6ff82c61a73628f74eb57e60b843ae1a9%5E%21

Resolves: tdf#122484 replace gtk autocomplete with vcl-alike autoselect

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.