Resolves: tdf#122484 replace gtk autocomplete with vcl-alike autoselect

Change-Id: I941e32a973cdd1bc79e3739b24fdf834aa52cb11