vcl/source/app/salvtables.cxx
@@ -2108,6 +2108,7 @@ public:
         {
             SvTreeListEntry* pEntry = m_xTreeView->GetEntry(nullptr, pos);
             m_xTreeView->Select(pEntry, true);
+            m_xTreeView->MakeVisible(pEntry);
         }
         enable_notify_events();
     }
@@ -3500,6 +3501,8 @@ IMPL_LINK(SalInstanceEntryTreeView, AutocompleteHdl, Edit&, rEdit, void)
             break;
         }
     }
+
+    m_xTreeView->select(nPos);
 
     if (nPos != -1)
     {
